feat: GCA-XX | improve error validation
