# internal/deliveries/http/v2/token_v2_handler.go
@@ -32,7 +32,7 @@ func NewTokenHandler(api *echo.Group, a *authorization.Auth, c *config.Configura
 // @Param X-API-Key header string true "mandatory header to access endpoint"
 // @Success 200 {object} models.List{data=[]models.TokensResponse} "Response indicates that the request succeeded and the resources has been fetched and transmitted in the message body"
 // @Failure 400 {object} models.ErrorResponse "Bad Request"
-// @Failure 422 {object} models.ErrorValidationResponse{errors=validator.ErrorValidateResponse} "Validation error. This can happen if there is an error validation while create account"
+// @Failure 422 {object} models.ErrorValidationResponse{errors=models.ErrorValidateResponse} "Validation error. This can happen if there is an error validation while create account"
 // @Router /v2/tokens [get]
 func (th *TokenHandler) Refresh(ctx echo.Context) error {
 	tokens, err := th.auth.GenerateTokens(ctx.Get("communityId").(string), ctx.Get("userType").([]string), ctx.Get("roles").([]string), "active")
